--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -1,7 +1,7 @@
 - title: "Introduction"
   url: "docs/introduction"
 - title: "Manual"
-  url: "docs/introduction"
+  url: "docs/step1"
   children:
     - title: Step 1
       url: "docs/step1"
